# movies_recommender

./: README.md  pyproject.toml
movies_recommender/: core.py  models.py  thresholds.py
movies_recommender/eda/: main.py
