[tool.poetry]
name = "movies-recommender"
version = "0.1.0"
description = ""
authors = ["Aleksandar1932 <aleksandar.ivanovski123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
