[tool.poetry]
name = "movies-recommender"
version = "1.0.0"
description = ""
authors = ["Aleksandar1932 <aleksandar.ivanovski123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"
black = "^24.4.0"


[[tool.poetry.source]]
name = "foo"
url = "https://pypi.example.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
